obscuring company logos

--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
     </button>
     <div class="page-container">
         <div class="amgen-logo">
-            <img src="assets/icons/amge.svg" />
+            <img src="https://via.placeholder.com/200x125?text=Logo+placeholder" />
         </div>
         <div class="myke-logo">
-            <img src="assets/icons/myke.png" />
+            <img src="https://via.placeholder.com/100x50?text=Logo+placeholder" />
         </div>
         <div class="grid-container hide">
             <div class="grid-ratio-container">
@@ -39,7 +39,7 @@
         </div>
         <div class="get-started">
             <div class="start-myke-container">
-                <img id="start-myke-logo" src="assets/icons/myke.png" />
+                <img id="start-myke-logo" src="https://via.placeholder.com/468x250?text=Logo+placeholder" />
             </div>
             <div class="case-study-container">
                 <a id="start" data-option="0"><img class="case-study" src="assets/icons/view-smm.svg" /></a>
