obscuring company from classes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 73.29 61.21"><defs><style>.cls-3{fill:none;stroke:#2a2a3f;stroke-linecap:round;stroke-linejoin:round;stroke-width:4px;}</style></defs><g id="Layer_2" data-name="Layer 2"><g id="Layer_1-2" data-name="Layer 1"><line class="cls-3" x1="2" y1="30.75" x2="71.29" y2="30.75"/><path class="cls-3" d="M26.79,2l-22,22a9.54,9.54,0,0,0,0,13.47L26.51,59.21"/></g></g></svg>
     </button>
     <div class="page-container">
-        <div class="amgen-logo">
+        <div class="company2-logo">
             <img src="https://via.placeholder.com/200x125?text=Logo+placeholder" />
         </div>
-        <div class="myke-logo">
+        <div class="company1-logo">
             <img src="https://via.placeholder.com/100x50?text=Logo+placeholder" />
         </div>
         <div class="grid-container hide">
@@ -38,8 +38,8 @@
             </div>
         </div>
         <div class="get-started">
-            <div class="start-myke-container">
-                <img id="start-myke-logo" src="https://via.placeholder.com/468x250?text=Logo+placeholder" />
+            <div class="start-company1-container">
+                <img id="start-company1-logo" src="https://via.placeholder.com/468x250?text=Logo+placeholder" />
             </div>
             <div class="case-study-container">
                 <a id="start" data-option="0"><img class="case-study" src="assets/icons/view-smm.svg" /></a>
